# apiFISH

./: .gitignore  README.md  deploy.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: tests.yml
apifish/: __init__.py
apifish/classification/: __init__.py  features.py  input_preparation.py
apifish/classification/tests/: test_features.py  test_input_preparation.py
apifish/deep_learning/: __init__.py  models_segmentation.py
apifish/detection/: __init__.py  cluster_detection.py  dense_decomposition.py  spot_detection.py  spot_modeling.py  utils.py
apifish/detection/tests/: test_cluster_detection.py  test_dense_decomposition.py  test_spot_detection.py  test_spot_modeling.py  test_utils.py
apifish/multistack/: __init__.py  colocalization.py  postprocess.py  preprocess.py  utils.py
apifish/multistack/tests/: test_colocalization.py  test_postprocess.py  test_preprocess.py  test_utils.py
apifish/plot/: __init__.py  plot_images.py  plot_quality.py  utils.py
apifish/segmentation/: __init__.py  cell_segmentation.py  nuc_segmentation.py  postprocess.py  utils.py
apifish/segmentation/test/: test_cell_segmentation.py  test_nuc_segmentation.py  test_postprocess.py  test_utils.py
apifish/stack/: __init__.py  io.py  preprocess.py  projection.py  utils.py
apifish/stack/tests/: test_augmentation.py  test_filter.py  test_io.py  test_preprocess.py  test_projection.py  test_quality.py  test_utils.py
docs/source/: conf.py  index.rst
docs/source/development/: contributing_to_apiFISH.md  document.md  installation.md  process.md
(+31 files in other folders)
