[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apifish"
version = "0.6.4dev"
description = "Toolbox for the analysis of smFISH images."
readme = "README.md"
authors = [{name='Arthur Imbert',email='arthur.imbert.pro@gmail.com'},{ name = "Marcelo Nollmann", email = "marcelo.nollmann@cbs.cnrs.fr" }]
license = { file = "LICENSE" }
keywords = []
dependencies = ["astropy >= 4.3.1",
                "matplotlib >= 3.0.2",
                "numpy >= 1.16.0",
                "scikit-image >= 0.14.2",
                "scikit-learn >= 0.21.0",
                "scipy >= 1.4.1",
                "pandas >= 0.24.0",
                "mrc >= 0.1.5",
                "tensorflow >= 2.3.0",
                "tensorflow-addons >= 0.12.1"
                ]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/apiFISH/apiFISH"
